--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -44,8 +44,7 @@
       }
     },
     "links": {
-      "Docs": "Docs",
-      "Blog": "Blog"
+      "Docs": "Docs"
     },
     "categories": {
       "General": "General",
