updated voucher docs

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -49,7 +49,7 @@
       },
       "voucher/prerequisites": {
         "title": "prerequisites & limitations",
-        "sidebar_label": "prerequisites & limitations"
+        "sidebar_label": "Prerequisites & limitations"
       }
     },
     "links": {
